syntax = "proto3";
service User {
  rpc GetUser (GetUserRequest) returns (UserResponse) {}
}
message GetUserRequest {
  string user_id = 1;
}
message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

option go_package = "github.com/pistatium/re_ark";
